2005-07-15  Graham Percuval  <gperlist@shaw.ca>

	* Documentation/user/ <various>: backported stuff.

2005-07-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/tutorial.itely (Running LilyPond for the
	first time): remove TeX remark.

	* VERSION (PACKAGE_NAME): release 2.6.1

2005-07-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/music-wrapper.cc (Music_wrapper): use start_callback_proc
	(not length_callback_proc) for start_callback_. This fixes grace
	notes at the start of music wrappers.

2005-07-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* po/{de,fr}.po: update.

2005-07-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/lilylib.py: remove set_environment()

	* lily/ly-module.cc (ly_make_anonymous_module): define
	%module-public-interface of module. 

	* cygwin/GNUmakefile ($(outdir)/%.sh): Bugfix: use TAB (Bertalan
	Fodor).  
	
	* scm/output-svg.scm: remove old definitions.

	* scripts/lilypond-book.py (do_file): search for kpsewhich before
	invoking.

	* python/lilylib.py (search_exe_path): new function.

2005-06-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* po/zh_TW.po: update from translation project.

2005-06-28  Graham Percival  <gperlist@shaw.ca>

	* scm/midi.scm: compile fix.

2005-06-28  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py : Fix embarrassing bug in my previous
	patch. Now, the tempfile module is loaded too, not only used.

2005-06-28  Stephen Charles McCarthy  <stecmccarthy@hotpop.com>

	* scm/midi.scm: changed midi volumes in absolute-volume-alist from
	0.05 - 1.00 to 0.25 - 1.00

	* scm/midi.scm: moved the default-instrument-equalizer procedure
	to just under the insturment-equalizer-alist it takes as an
	argument.

2005-06-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/advanced-notation.itely (Font selection):
	remove CMR note.

	* scm/framework-ps.scm (write-preamble): ly:warning iso. ly:warn 

2005-06-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* THANKS: Add UTF-8 marker.
